--- a/install/helm/values.yaml
+++ b/install/helm/values.yaml
@@ -32,15 +32,28 @@ service:
 
 ingress:
   className: "nginx"
-  annotations:
+  commonAnnotations: &commonAnnotations
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-  hosts:
-    - host: thunder.local
-      paths:
-        - path: /
-          pathType: Prefix
-  tls: []
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    nginx.ingress.kubernetes.io/affinity: cookie
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/proxy-buffer-size: 64k
+    nginx.ingress.kubernetes.io/proxy-buffering: "on"
+    nginx.ingress.kubernetes.io/session-cookie-conditional-samesite-none: "true"
+    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
+    nginx.ingress.kubernetes.io/session-cookie-name: paf
+    nginx.ingress.kubernetes.io/session-cookie-path: /
+    nginx.ingress.kubernetes.io/session-cookie-samesite: None
+  customAnnotations: &customAnnotations
+    {}
+  combinedAnnotations:
+    !!merge <<: *commonAnnotations
+    !!merge <<: *customAnnotations
+  hostname: thunder.local
+  paths:
+    - path: /
+      pathType: Prefix
+  tlsSecretsName: "thunder-tls"
 
 resources:
   limits:
