--- a/install/helm/values.yaml
+++ b/install/helm/values.yaml
@@ -27,8 +27,8 @@ podSecurityContext: {}
 securityContext: {}
 
 service:
-  type: ClusterIP
   port: 8080
+  targetPort: 8080
 
 ingress:
   className: "nginx"
