--- a/install/helm/templates/cm-conf.yaml
+++ b/install/helm/templates/cm-conf.yaml
@@ -17,7 +17,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "thunder.fullname" . }}-config
+  name: {{ include "thunder.fullname" . }}-config-map-conf
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "thunder.labels" . | nindent 4 }}
