--- a/install/helm/conf/deployment.yaml
+++ b/install/helm/conf/deployment.yaml
@@ -15,71 +15,71 @@
 # under the License.
 
 server:
-  hostname: {{ .Values.thunder.server.hostname | quote }}
-  port: {{ .Values.thunder.server.port }}
+  hostname: {{ .Values.configuration.server.hostname | quote }}
+  port: {{ .Values.configuration.server.port }}
 
 gate_client:
-  hostname: {{ .Values.thunder.gateClient.hostname | quote }}
-  port: {{ .Values.thunder.gateClient.port }}
-  scheme: {{ .Values.thunder.gateClient.scheme | quote }}
-  login_path: {{ .Values.thunder.gateClient.loginPath | quote }}
-  error_path: {{ .Values.thunder.gateClient.errorPath | quote }}
+  hostname: {{ .Values.configuration.gateClient.hostname | quote }}
+  port: {{ .Values.configuration.gateClient.port }}
+  scheme: {{ .Values.configuration.gateClient.scheme | quote }}
+  login_path: {{ .Values.configuration.gateClient.loginPath | quote }}
+  error_path: {{ .Values.configuration.gateClient.errorPath | quote }}
 
 security:
-  cert_file: {{ .Values.thunder.security.certFile | quote }}
-  key_file: {{ .Values.thunder.security.keyFile | quote }}
+  cert_file: {{ .Values.configuration.security.certFile | quote }}
+  key_file: {{ .Values.configuration.security.keyFile | quote }}
 
 database:
   identity:
-    type: {{ .Values.thunder.database.identity.type | quote }}
-    {{- if eq .Values.thunder.database.identity.type "sqlite" }}
-    path: {{ .Values.thunder.database.identity.sqlitePath | quote }}
-    options: {{ .Values.thunder.database.identity.options | quote }}
+    type: {{ .Values.configuration.database.identity.type | quote }}
+    {{- if eq .Values.configuration.database.identity.type "sqlite" }}
+    path: {{ .Values.configuration.database.identity.sqlitePath | quote }}
+    options: {{ .Values.configuration.database.identity.options | quote }}
     {{- else }}
-    hostname: {{ .Values.thunder.database.identity.host | quote }}
-    port: {{ .Values.thunder.database.identity.port }}
-    name: {{ .Values.thunder.database.identity.name | quote }}
-    username: {{ .Values.thunder.database.identity.username | quote }}
-    password: {{ .Values.thunder.database.identity.password | quote }}
-    sslmode: {{ .Values.thunder.database.identity.sslmode | quote }}
+    hostname: {{ .Values.configuration.database.identity.host | quote }}
+    port: {{ .Values.configuration.database.identity.port }}
+    name: {{ .Values.configuration.database.identity.name | quote }}
+    username: {{ .Values.configuration.database.identity.username | quote }}
+    password: {{ .Values.configuration.database.identity.password | quote }}
+    sslmode: {{ .Values.configuration.database.identity.sslmode | quote }}
     {{- end }}
   runtime:
-    type: {{ .Values.thunder.database.runtime.type | quote }}
-    {{- if eq .Values.thunder.database.runtime.type "sqlite" }}
-    path: {{ .Values.thunder.database.runtime.sqlitePath | quote }}
-    options: {{ .Values.thunder.database.runtime.options | quote }}
+    type: {{ .Values.configuration.database.runtime.type | quote }}
+    {{- if eq .Values.configuration.database.runtime.type "sqlite" }}
+    path: {{ .Values.configuration.database.runtime.sqlitePath | quote }}
+    options: {{ .Values.configuration.database.runtime.options | quote }}
     {{- else }}
-    hostname: {{ .Values.thunder.database.runtime.host | quote }}
-    port: {{ .Values.thunder.database.runtime.port }}
-    name: {{ .Values.thunder.database.runtime.name | quote }}
-    username: {{ .Values.thunder.database.runtime.username | quote }}
-    password: {{ .Values.thunder.database.runtime.password | quote }}
-    sslmode: {{ .Values.thunder.database.runtime.sslmode | quote }}
+    hostname: {{ .Values.configuration.database.runtime.host | quote }}
+    port: {{ .Values.configuration.database.runtime.port }}
+    name: {{ .Values.configuration.database.runtime.name | quote }}
+    username: {{ .Values.configuration.database.runtime.username | quote }}
+    password: {{ .Values.configuration.database.runtime.password | quote }}
+    sslmode: {{ .Values.configuration.database.runtime.sslmode | quote }}
     {{- end }}
 
 cache:
-  disabled: {{ .Values.thunder.cache.disabled }}
-  type: {{ .Values.thunder.cache.type | quote }}
-  size: {{ .Values.thunder.cache.size }}
-  ttl: {{ .Values.thunder.cache.ttl }}
-  eviction_policy: {{ .Values.thunder.cache.evictionPolicy | quote }}
-  cleanup_interval: {{ .Values.thunder.cache.cleanupInterval }}
+  disabled: {{ .Values.configuration.cache.disabled }}
+  type: {{ .Values.configuration.cache.type | quote }}
+  size: {{ .Values.configuration.cache.size }}
+  ttl: {{ .Values.configuration.cache.ttl }}
+  eviction_policy: {{ .Values.configuration.cache.evictionPolicy | quote }}
+  cleanup_interval: {{ .Values.configuration.cache.cleanupInterval }}
 
 oauth:
   jwt:
-    issuer: {{ .Values.thunder.oauth.jwt.issuer | quote }}
-    validity_period: {{ .Values.thunder.oauth.jwt.validityPeriod }}
+    issuer: {{ .Values.configuration.oauth.jwt.issuer | quote }}
+    validity_period: {{ .Values.configuration.oauth.jwt.validityPeriod }}
   refresh_token:
-    renew_on_grant: {{ .Values.thunder.oauth.refreshToken.renewOnGrant }}
-    validity_period: {{ .Values.thunder.oauth.refreshToken.validityPeriod }}
+    renew_on_grant: {{ .Values.configuration.oauth.refreshToken.renewOnGrant }}
+    validity_period: {{ .Values.configuration.oauth.refreshToken.validityPeriod }}
 
 flow:
-  graph_directory: {{ .Values.thunder.flow.graphDirectory | quote }}
+  graph_directory: {{ .Values.configuration.flow.graphDirectory | quote }}
   authn:
-    default_flow: {{ .Values.thunder.flow.authn.defaultFlow | quote }}
+    default_flow: {{ .Values.configuration.flow.authn.defaultFlow | quote }}
 
 cors:
   allowed_origins:
-  {{- range .Values.thunder.cors.allowedOrigins }}
+  {{- range .Values.configuration.cors.allowedOrigins }}
     - {{ . | quote }}
   {{- end }}
