--- a/install/helm/templates/service.yaml
+++ b/install/helm/templates/service.yaml
@@ -27,5 +27,5 @@ spec:
   ports:
     - name: servlet-https
       port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.targetPort }}
+      targetPort: {{ .Values.deployment.container.port }}
       protocol: TCP
