--- a/install/helm/values.yaml
+++ b/install/helm/values.yaml
@@ -1,30 +1,65 @@
 # Default values for Thunder
 # This is a YAML-formatted file.
 
-replicaCount: 1
 
-image:
-  repository: thunder
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+deployment:
+  replicaCount: 1
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
+  apparmor:
+    enabled: true
+    profile: "RuntimeDefault"
+  securityContext:
+    enableRunAsUser: true
+    runAsUser: 802
+    seccompProfile:
+      enabled: true
+      type: "RuntimeDefault"
+  # Pod termination grace period. K8s API server waits this period after pre stop hook and sending TERM signal
+  terminationGracePeriodSeconds: 40
+  image:
+    # -- Container image registry host name
+    registry: "lakshanbwso2"
+    # -- Container image repository name
+    repository: "thunder"
+    # -- Container image digest
+    digest: ""
+    # -- Container image tag. Either "tag" or "digest" should be defined
+    tag: "latest"
+    pullPolicy: "Always"
+    imagePullSecret: ""
+  startupProbe:
+    initialDelaySeconds: 10
+    periodSeconds: 5
+    failureThreshold: 30
+  livenessProbe:
+    periodSeconds: 10
+  readinessProbe:
+    initialDelaySeconds: 10
+    periodSeconds: 5
+  container:
+    port: 8090
+  resources:
+    limits:
+      cpu: 2
+      memory: 1024Mi
+    requests:
+      cpu: 1
+      memory: 512Mi
 
-imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
 serviceAccount:
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: ""
-
-podAnnotations: {}
-podSecurityContext: {}
-securityContext: {}
+  name: "thunder-service-account"
+  create: true
 
 service:
-  port: 8080
-  targetPort: 8080
+  port: 8090
 
 ingress:
   className: "nginx"
@@ -51,22 +86,8 @@ ingress:
       pathType: Prefix
   tlsSecretsName: "thunder-tls"
 
-resources:
-  limits:
-    cpu: 1000m
-    memory: 1024Mi
-  requests:
-    cpu: 500m
-    memory: 512Mi
-
-persistence:
-  enabled: true
-  storageClass: ""
-  accessMode: ReadWriteOnce
-  size: 1Gi
-
 # Thunder specific configurations
-thunder:
+configuration:
   # Server configuration
   server:
     hostname: "0.0.0.0"
@@ -141,16 +162,3 @@ thunder:
       - "https://localhost:3000"
       - "https://localhost:9001"
       - "https://localhost:9090"
-
-  # Secret key for JWT token generation
-  jwtSecret: "thunder-jwt-secret-key-change-in-production"
-
-  # Admin user credentials
-  adminUser:
-    username: "admin"
-    password: "admin"
-    email: "admin@example.com"
-
-nodeSelector: {}
-tolerations: []
-affinity: {}
