--- a/install/helm/values.yaml
+++ b/install/helm/values.yaml
@@ -9,7 +9,7 @@ deployment:
       maxSurge: 1
       maxUnavailable: 0
   apparmor:
-    enabled: true
+    enabled: false
     profile: "RuntimeDefault"
   securityContext:
     enableRunAsUser: true
